Django/users/Queries.txt
Queries

>>> from userApp.models import *
>>> User.objects.create(first_name="Luna", last_name="Roosevelt", email_address="none", age="4")
<User: User object (1)>
>>>  User.objects.create(first_name="Loai", last_name="Zaidan", email_address="loaizaidan@gmail.com", age="20")
  File "<console>", line 1
    User.objects.create(first_name="Loai", last_name="Zaidan", email_address="loaizaidan@gmail.com", age="20")
IndentationError: unexpected indent
>>> User.objects.create(first_name="Luna", last_name="Roosevelt", email_address="none", age="4")
<User: User object (2)>
>>> User.objects.create(first_name="Zak", last_name="Jibreen", email_address="zakjib@gmail.com", age="25")
<User: User object (3)>
>>> User.objects.all()
<QuerySet [<User: User object (1)>, <User: User object (2)>, <User: User object (3)>]>
>>> User.objects.last()
<User: User object (3)>
>>> User.objects,first()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'first' is not defined. Did you mean: 'list'?
>>> User.objects.first()
<User: User object (1)>
>>> User.objects.get(id=3)
<User: User object (3)>
>>> c = User.objects.get(id=3)
>>> c.last_name = "Pancakes"
>>> c.save()
>>> c.last_name
'Pancakes'
>>> d = User.objects.get(id=2)
>>> d.delete()
(1, {'userApp.User': 1})
>>> User.objects.all().order_by('first_name')
<QuerySet [<User: User object (1)>, <User: User object (3)>]>
>>> User.objects.all().order_by('-1first_name')
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "C:\Users\loaiz\Desktop\Django Env\denv\Lib\site-packages\django\db\models\query.py", line 1701, in order_by
    obj.query.add_ordering(*field_names)
    ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^
  File "C:\Users\loaiz\Desktop\Django Env\denv\Lib\site-packages\django\db\models\sql\query.py", line 2249, in add_ordering
    self.names_to_path(item.split(LOOKUP_SEP), self.model._meta)
    ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\loaiz\Desktop\Django Env\denv\Lib\site-packages\django\db\models\sql\query.py", line 1768, in names_to_path
    raise FieldError(
    ...<2 lines>...
    )
django.core.exceptions.FieldError: Cannot resolve keyword '1first_name' into field. Choices are: age, created_at, email_address, first_name, id, last_name, updated_at
>>> User.objects.all().order_by('-first_name'))
  File "<console>", line 1
    User.objects.all().order_by('-first_name'))
                                              ^
SyntaxError: unmatched ')'
>>> User.objects.all().order_by('-first_name')
<QuerySet [<User: User object (3)>, <User: User object (1)>]>
>>>